--- a/CSS/digipack-login.css
+++ b/CSS/digipack-login.css
@@ -1,19 +1,47 @@
+*{
+    transition: 0.3s;
+}
+
+body{
+    font-family: system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji';
+}
+
 main .image {
     background-image: url(https://dummyimage.com/1920x1080); background-size: cover; 
     background-repeat: no-repeat; 
-    background-position: center;
-    z-index: -1;
+    background-position:center;
+    background-attachment: fixed;
+    z-index: -2;
+}
+
+.image .row{
+   height: 100vh;
 }
 
 .image .black{
+    width: 100%;
+    height: 100vh;
     background-color: black;
     opacity: 0.6;
-    z-index: 1
+    z-index: 0;
 }
 
 .image .word{
+    padding: 0 6rem;
     color: white;
- 
+    z-index: 1;
+}
+
+.image .word h2{
+    font-size: 48px;
+    line-height: 1;
+    font-weight: 700;
+    letter-spacing: .025em;
+}
+
+.image .word p{
+    font-size: 30px;
+    line-height: 2.25rem;
 }
 
 
@@ -23,6 +51,8 @@ main .image {
 }
 
 .image .blue{
+    height: 100vh;
+    padding: 0 4rem;
     background-color: #162446;
     z-index: 1
 }
@@ -31,7 +61,7 @@ main .image {
     color: white;
     width: 40px;
     height: 40px;
-    
+    font-weight: 700;
     font-size: 18px;
     border: 2px solid white;
     
@@ -39,17 +69,70 @@ main .image {
 
 .image .col-12 p{
     color: white;
-    font-size: 16px;  
+    font-size: 16px; 
+    margin: 0; 
 }
-
-/* .image .row.signin{
-    width: 100%;
-} */
 
 .image .row .col-12 input{
-    width: 100%;
+    width: 66.67%;
+    padding-top: 16px;
+    padding-bottom: 8px;
+    background-color: black;
+    font-size: 18px;
+    border: black;
+}
+
+.image .row .col-12 .email, .image .row .col-12 .password{
+    padding-top: 16px;
+    padding-bottom: 8px;
+}
+
+.image .blue .col-12:nth-child(6){
+    display: flex;
+    justify-content: center;
+    width: 66.67%;
+}
+
+.image .blue .col-12 a{
+    text-align: right;
+    width: 66.67%; 
+    color: gray;
+}
+
+.image .blue .col-12 a:hover{
+    transition: 1.5s;
+color: white;
+}
+
+.image .row .col-12 button{
+    width: 64.8%;
+    border-radius: 30px;
+    font-size: 18px;
+    background-color:rgb(99, 102, 241);
+    border: 0px;
+    color: white;
+}
+
+.image .row .col-12 .signin{
+padding: 16px 16px 8px 16px;
+}
+
+.image .row .col-12 .hidden{
+    display: none;
 }
 
 
+@media(max-width: 992px){
+    .word{
+        display: none;
+    }
+
+    .image .blue{
+        
+        background-color: black;
+        opacity: 0.6;
+        
+    }
+}
 
 
