--- a/CSS/digipack-login.css
+++ b/CSS/digipack-login.css
@@ -3,61 +3,61 @@
 }
 
 body{
+    margin: 0;
     font-family: system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji';
 }
 
-main .image {
-    background-image: url(https://dummyimage.com/1920x1080); background-size: cover; 
+main .back-image {
+    background-image: url(https://dummyimage.com/1920x1080); 
+    background-size: cover; 
     background-repeat: no-repeat; 
     background-position:center;
     background-attachment: fixed;
-    z-index: -2;
-}
-
-.image .row{
-   height: 100vh;
-}
-
-.image .black{
     width: 100%;
     height: 100vh;
-    background-color: black;
-    opacity: 0.6;
-    z-index: 0;
 }
 
-.image .word{
+main .mask{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.mask .word{
     padding: 0 6rem;
     color: white;
-    z-index: 1;
 }
 
-.image .word h2{
+.mask .word h2{
     font-size: 48px;
     line-height: 1;
     font-weight: 700;
     letter-spacing: .025em;
 }
 
-.image .word p{
+.mask .word p{
     font-size: 30px;
     line-height: 2.25rem;
 }
 
 
-.image .col-12 svg{
+.mask .col-12 svg{
     width: auto;
     height: 4rem;
 }
 
-.image .blue{
+.mask .blue{
+    width: 100%;
     height: 100vh;
-    padding: 0 4rem;
-    background-color: #162446;
-    z-index: 1
+    background-color: #162446; 
 }
 
-.image .col-12 .link{
+.mask .right{
+    padding: 0 4rem;
+}
+
+
+.mask .col-12 .link{
     color: white;
     width: 40px;
     height: 40px;
@@ -67,14 +67,18 @@ main .image {
     
 }
 
-.image .col-12 p{
+.mask .col-12 p{
     color: white;
     font-size: 16px; 
     margin: 0; 
 }
 
-.image .row .col-12 input{
-    width: 66.67%;
+.form{
+    width: 66.6667%;
+}
+
+.mask .row .col-12 input{
+    width: 100%;
     padding-top: 16px;
     padding-bottom: 8px;
     background-color: black;
@@ -82,30 +86,25 @@ main .image {
     border: black;
 }
 
-.image .row .col-12 .email, .image .row .col-12 .password{
+.mask .row .col-12 .email, .mask .row .col-12 .password{
     padding-top: 16px;
     padding-bottom: 8px;
 }
 
-.image .blue .col-12:nth-child(6){
-    display: flex;
-    justify-content: center;
-    width: 66.67%;
-}
 
-.image .blue .col-12 a{
+.mask .col-12 a{
     text-align: right;
     width: 66.67%; 
     color: gray;
 }
 
-.image .blue .col-12 a:hover{
+.mask .col-12 a:hover{
     transition: 1.5s;
-color: white;
+    color: white;
 }
 
-.image .row .col-12 button{
-    width: 64.8%;
+.mask .row .col-12 button{
+    width: 100%;
     border-radius: 30px;
     font-size: 18px;
     background-color:rgb(99, 102, 241);
@@ -113,26 +112,58 @@ color: white;
     color: white;
 }
 
-.image .row .col-12 .signin{
+.mask .row .col-12 .signin{
 padding: 16px 16px 8px 16px;
 }
 
-.image .row .col-12 .hidden{
+.mask .row .col-12 .hidden{
     display: none;
+}
+
+.mask .links{
+    width: 50%;
+    bottom: 0;
 }
 
 
 @media(max-width: 992px){
+    
+    .mask .right{
+        padding: 2rem 0;
+    }
+
     .word{
         display: none;
     }
-
-    .image .blue{
-        
-        background-color: black;
-        opacity: 0.6;
-        
+    .mask .blue{
+       display: none;
     }
+
+    .mask .links{
+        background-color: #162446;
+        width: 100%;
+        bottom: -65px;
+        padding: 0 0 40px 0;
+    }
+    
 }
+
+@media(max-width: 640px){
+
+    .mask .col-12 svg {
+        height: 3rem;
+    }
+
+    .form{
+        width: 100%;
+        padding: 0 0.75rem
+    }
+
+    .mask .links{
+       margin-top: -70px;
+    }
+    
+}
+
 
 
