--- a/CSS/digipack-shopping cart-1.css
+++ b/CSS/digipack-shopping cart-1.css
@@ -21,3 +21,11 @@ input[type=number]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.addBtn, .subBtn{
+cursor: pointer;
+border: none;
+width: 30px;;
+height: 100%;
+background-color: rgb(243,244,246);
+}
