--- a/CSS/digipack-shopping cart-1.css
+++ b/CSS/digipack-shopping cart-1.css
@@ -28,4 +28,11 @@ border: none;
 width: 30px;;
 height: 100%;
 background-color: rgb(243,244,246);
+outline: none;
+}
+
+@media(max-width:768px){
+  .addBtn{
+      margin-right: 0;
+  }
 }
