--- a/CSS/digipack-login.css
+++ b/CSS/digipack-login.css
@@ -128,8 +128,9 @@ padding: 16px 16px 8px 16px;
 }
 
 @media(max-width: 992px){
+
     .mask .right{
-        padding: 2rem 0;
+        padding: 2rem 0 10rem 0;
     }
     .word{
         display: none;
@@ -137,12 +138,15 @@ padding: 16px 16px 8px 16px;
     .mask .blue{
        display: none;
     }
+
     .mask .links{
-        background-color: #162446;
+        /* background-color: #162446; */
         width: 100%;
-        bottom: -65px;
-        padding: 0 0 40px 0;
+        padding-bottom: 11rem;
+        /* bottom: -65px;
+        padding: 0 0 40px 0; */
     }
+
 }
 
 @media(max-width: 640px){
@@ -157,6 +161,12 @@ padding: 16px 16px 8px 16px;
     .mask .links{
        margin-top: -70px;
     }
+
+    .mask .links{
+        padding-bottom: 12rem;
+
+    }
+
 }
 
 
