--- a/CSS/digipack-template.css
+++ b/CSS/digipack-template.css
@@ -3,7 +3,7 @@ body{
 }
 
 nav .container .navbar {
-    padding: 0 24px;
+    padding: 0 32px;
     height: 92px;
     display: flex;
     justify-content: space-between;
@@ -61,7 +61,7 @@ display: none;
 
 main {
     width: 100%;
-    min-height: calc(100vh - 473px);
+    min-height: calc(100vh - 457px);
 }
 
 
@@ -275,6 +275,8 @@ footer .container{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding-right: 0;
+        padding-left: 0;
     }
 
     nav .container .navbar .logo img {
