--- a/CSS/digipack-template.css
+++ b/CSS/digipack-template.css
@@ -116,7 +116,7 @@ footer .container .footer-up .col-12 li {
 }
 
 footer .container .footer-up .col-12.col-md-6 {
-    padding-left: 80px;
+    padding-left: 100px;
 }
 
 
@@ -252,7 +252,7 @@ footer .container{
     }
 
     footer .container .footer-up .col-12.col-md-6 {
-        margin-top: 50px;
+        /* margin-top: 50px; */
         padding-left: 0;
     }
 
