--- a/CSS/digipack-index.css
+++ b/CSS/digipack-index.css
@@ -3,9 +3,9 @@ body {
 
 }
 
-main .container {
+/* main .container {
     max-width: 85%;
-}
+} */
 
 #carouselExampleIndicators {
     z-index: -99;
@@ -63,7 +63,7 @@ main .container .section-1 .row p.blue-line::after {
 
 
     position: absolute;
-    top: 100px;
+    top: 80px;
     left: calc(50% - 32px);
 
 }
@@ -131,21 +131,23 @@ main .section-3 h1 {
 main .section-3 p {
     width: 100%;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 }
 
 main .section-3 .container {
-    width: 60%;
+    width: 66.667%;
     padding: 0;
 }
+
+main .section-3 th {
+  font-weight: 500;
+}
+
 
 main .section-4 {
     padding: 96px 20px;
 }
 
-main .section-4 .row {
-    padding: 0 20px;
-}
 
 main .section-4 .row h1 {
     font-size: 30px;
@@ -232,17 +234,16 @@ main .section-5 {
     width: 120px;
     height: 45px;
     font-size: 18px;
-
 }
 
 main .section-6 .row {
     padding: 96px 20px;
-
+    margin-right: 10%; margin-left: 10%;
 }
 
 .section-6 img {
     width: 100%;
-    height: auto;
+
     object-fit: cover;
 }
 
@@ -322,7 +323,11 @@ main .section-6 .row {
 .section-6 .price .btn-group .button button {
     border-radius: 5px;
     margin: 0;
+    background-color: rgb(99, 102, 241);
 }
+
+
+
 
 .section-7 .container {
     max-width: 95%;
@@ -405,12 +410,55 @@ main .section-6 .row {
     background-color: rgb(99, 102, 241);
 }
 
+@media (min-width: 576px) {
+    main .container{
+        max-width: 576px;
+    }
+    
+}
+
+@media (min-width: 640px) {
+    main .container{
+        max-width: 640px;
+    }
+    
+}
+
+@media (min-width: 768px) {
+    main .container{
+        max-width: 768px;
+    }
+}
+
+@media (min-width: 1024px) {
+    main .container{
+        max-width: 1024px;
+    }
+
+    .section-6 img {
+        height: 100%;
+    }
+
+}
+
+@media (min-width: 1280px) {
+    main .container{
+        max-width: 1280px;
+    }
+
+
+}
+@media (min-width: 1536px) {
+    main .container{
+        max-width: 1536px;
+    }
+
+}
+
 @media (max-width: 992px) {
 
     main .container {
-        max-width: 80%;
         margin: auto;
-
     }
 
     main .section-2 .row h1 {
@@ -426,9 +474,12 @@ main .section-6 .row {
         margin: 0 0 40px 0;
     }
 
-    .section-6 .container {
-        max-width: 80%;
+    /* .section-6 .container {
+        max-width: 100%;
+    } */
 
+    main .section-6 .row {
+        margin-right: 0; margin-left: 0;
     }
 
     .section-6 img {
@@ -459,11 +510,7 @@ main .section-6 .row {
         width: 100%;
         height: 70vw;
     }
-
-    main .container {
-        max-width: 100%;
-    }
-
+  
     .section-2 .pic {
         padding: 0;
         padding: 4px;
@@ -476,6 +523,10 @@ main .section-6 .row {
 
     main .section-3 h1 {
         font-size: 30px;
+    }
+
+    main .section-4 .row h1 {
+        font-size: 24px;
     }
 
     .section-5 .row {
@@ -511,19 +562,9 @@ main .section-6 .row {
         margin-top: 24px;
     }
 
-    .section-6 .container {
-        max-width: 90%;
-
-    }
-
-
-
     .section-7 .container {
-        max-width: 95%;
-
+        max-width: 100%;
     }
-
-
 
     .section-8 .container .row .col-md-12 {
         margin-top: 40px;
@@ -546,6 +587,10 @@ main .section-6 .row {
     main .container .section-1 .row .col-12 h1 {
         font-size: 24px;
         margin-bottom: 12px;
+    }
+
+    main .container .section-1 .row p.blue-line {
+        margin-bottom: 80px;
     }
 
     main .section-2 .row h1 {
